# wuwu-logistics

./: .gitignore  README.md
.specstory/: .project.json
plugin-src/: .env.example  README.md  manifest.yaml  pyproject.toml  requirements.txt
plugin-src/models/: common_openai.py
plugin-src/models/llm/: _position.yaml  gpt-5.2.yaml  gpt-5.3-codex.yaml  llm.py
plugin-src/provider/: codex_responses.py  codex_responses.yaml
releases/: codex-responses-plugin-v0.0.12.difypkg  codex-responses-plugin-v0.0.17.difypkg  wuwu-logistics-plugin-v0.0.11.difypkg
scripts/: README.md  remote_models.py
