[project]
name = "dify-codex-responses"
version = "0.0.11"
description = "Hamster plugin for OpenAI-compatible relay APIs via Responses API"
readme = "README.md"
requires-python = ">=3.12"

dependencies = [
  "dify_plugin>=0.5.0,<0.6.0",
  "openai~=2.3.0",
  "tiktoken~=0.8.0",
]

[dependency-groups]
dev = []
